added differnet delete version to remove element from page and updated refined formatting

--- a/src/app/components/list/list.html
+++ b/src/app/components/list/list.html
@@ -3,6 +3,8 @@
     <patient-block-component
       ng-repeat="record in $ctrl.data track by record._id"
       record="record"
+      class="patient-block"
+      id="{{record._id}}"
     >
     </patient-block-component>
   </div>
