--- a/src/app/components/patientDrugs/patientDrugs.html
+++ b/src/app/components/patientDrugs/patientDrugs.html
@@ -31,7 +31,7 @@
         </p>
         <p>
           <strong>
-            DrugvIndication:
+            Drug Indication:
           </strong>
           {{item.drugIndication}}
         </p>
